--- a/.eslintrc
+++ b/.eslintrc
@@ -1,9 +1,13 @@
 {
   "extends": "airbnb",
+  "plugins": ["jest"],
   "globals": {
     "document": true
   },
   "rules": {
     "react/jsx-filename-extension": false
+  },
+  "env": {
+    "jest/globals": true
   }
 }
