--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "eslint-plugin-jest": "^21.12.2",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.6.1",
-    "jest-styled-components": "^4.11.0-1"
+    "jest-styled-components": "^4.11.0-1",
+    "nightmare": "^2.10.0"
   }
 }
