--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-redux": "^5.0.7",
     "react-scripts": "1.1.1",
+    "redux": "^3.7.2",
+    "redux-devtools-extension": "^2.13.2",
     "styled-components": "^3.1.6"
   },
   "scripts": {
