Updating the CCI commands to work correctly in CI env

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,5 +40,5 @@ jobs:
         
       # run tests!
       - run: npm run lint
-      - run: npm run start
-      - run: npm run test
+      - run: npm run start:ci
+      - run: npm run test:ci
