--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "start:ci": "CI=true react-scripts start &",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
+    "test:ci": "CI=true react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "lint": "eslint --ext js ."
   },
