--- a/.eslintrc
+++ b/.eslintrc
@@ -9,6 +9,7 @@
     "import/no-named-as-default": false,
     "react/jsx-filename-extension": false,
     "react/forbid-prop-types": false
+    "function-paren-newline": false
   },
   "env": {
     "jest/globals": true
