--- a/.eslintrc
+++ b/.eslintrc
@@ -6,10 +6,10 @@
     "window": true
   },
   "rules": {
-    "import/no-named-as-default": false,
-    "react/jsx-filename-extension": false,
-    "react/forbid-prop-types": false
-    "function-paren-newline": false
+    "import/no-named-as-default": 0,
+    "react/jsx-filename-extension": 0,
+    "react/forbid-prop-types": 0,
+    "function-paren-newline": 0
   },
   "env": {
     "jest/globals": true
