--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "body-parser": "^1.18.2",
+    "express": "^4.16.2",
+    "mongoose": "^5.0.7",
     "normalize.css": "^8.0.0",
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
@@ -15,6 +18,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "backend": "node ./src/backend/server.js",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
@@ -32,6 +36,7 @@
     "eslint-plugin-react": "^7.6.1",
     "jest-styled-components": "^4.11.0-1",
     "nightmare": "^2.10.0",
-    "sinon": "^4.3.0"
+    "sinon": "^4.3.0",
+    "supertest": "^3.0.0"
   }
 }
