--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bluebird": "^3.5.1",
     "body-parser": "^1.18.2",
+    "dotenv": "^5.0.1",
     "express": "^4.16.2",
-    "mongoose": "^5.0.7",
+    "mongoose": "^4.10.8",
+    "morgan": "^1.9.0",
     "normalize.css": "^8.0.0",
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
@@ -14,7 +17,8 @@
     "react-scripts": "1.1.1",
     "redux": "^3.7.2",
     "redux-devtools-extension": "^2.13.2",
-    "styled-components": "^3.1.6"
+    "styled-components": "^3.1.6",
+    "winston": "^2.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -30,7 +34,7 @@
     "enzyme-to-json": "^3.3.1",
     "eslint": "^4.18.0",
     "eslint-config-airbnb": "^16.1.0",
-    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-import": "^2.9.0",
     "eslint-plugin-jest": "^21.12.2",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.6.1",
