--- a/.eslintrc
+++ b/.eslintrc
@@ -13,7 +13,8 @@
     "import/no-unresolved": 0,
     "import/extensions": 0,
     "global-require": 0,
-    "no-underscore-dangle": ["error", { "allow": ["_id"] }]
+    "no-underscore-dangle": ["error", { "allow": ["_id"] }],
+    "no-unused-expressions": ["error", { "allowTaggedTemplates": true }]
   },
   "env": {
     "jest/globals": true
