--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "lint": "eslint --ext js /src"
+    "lint": "eslint --ext js src"
   },
   "devDependencies": {
     "enzyme": "^3.3.0",
@@ -34,12 +34,15 @@
     "enzyme-to-json": "^3.3.1",
     "eslint": "^4.18.0",
     "eslint-config-airbnb": "^16.1.0",
+    "eslint-config-prettier": "^2.9.0",
     "eslint-plugin-import": "^2.9.0",
     "eslint-plugin-jest": "^21.12.2",
     "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-prettier": "^2.6.0",
     "eslint-plugin-react": "^7.6.1",
     "jest-styled-components": "^4.11.0-1",
     "nightmare": "^2.10.0",
+    "prettier": "^1.11.1",
     "sinon": "^4.3.0",
     "supertest": "^3.0.0"
   }
