--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-scripts": "1.1.1",
     "redux": "^3.7.2",
     "redux-devtools-extension": "^2.13.2",
+    "redux-thunk": "^2.2.0",
     "styled-components": "^3.1.6",
     "winston": "^2.4.0"
   },
