--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "redux": "^3.7.2",
     "redux-devtools-extension": "^2.13.2",
     "redux-thunk": "^2.2.0",
+    "shortid": "^2.2.8",
     "styled-components": "^3.1.6",
     "winston": "^2.4.0"
   },
