--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.18.0",
     "bluebird": "^3.5.1",
     "body-parser": "^1.18.2",
     "dotenv": "^5.0.1",
     "express": "^4.16.2",
+    "isomorphic-fetch": "^2.2.1",
     "mongoose": "^4.10.8",
     "morgan": "^1.9.0",
     "normalize.css": "^8.0.0",
@@ -17,6 +19,7 @@
     "react-scripts": "1.1.1",
     "redux": "^3.7.2",
     "redux-devtools-extension": "^2.13.2",
+    "redux-saga": "^0.16.0",
     "redux-thunk": "^2.2.0",
     "shortid": "^2.2.8",
     "styled-components": "^3.1.6",
