--- a/.eslintrc
+++ b/.eslintrc
@@ -20,7 +20,7 @@
     "import/no-unresolved": 0,
     "import/extensions": 0,
     "global-require": 0,
-    "no-underscore-dangle": ["error", { "allow": ["_id"] }],
+    "no-underscore-dangle": ["error", { "allow": ["_id", "__v"] }],
     "no-unused-expressions": ["error", { "allowTaggedTemplates": true }]
   },
   "env": {
