--- a/.eslintrc
+++ b/.eslintrc
@@ -19,6 +19,7 @@
     "function-paren-newline": 0,
     "import/no-unresolved": 0,
     "import/extensions": 0,
+    "import/prefer-default-export": 0,
     "global-require": 0,
     "no-underscore-dangle": ["error", { "allow": ["_id", "__v"] }],
     "no-unused-expressions": ["error", { "allowTaggedTemplates": true }]
