--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "redux-devtools-extension": "^2.13.2",
     "redux-saga": "^0.16.0",
     "redux-thunk": "^2.2.0",
+    "reselect": "^3.0.1",
     "shortid": "^2.2.8",
     "styled-components": "^3.1.6",
     "winston": "^2.4.0"
