--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
   "main": "app.js",
   "scripts": {
     "test": "jest --watch",
-    "start": "node ./server.js"
+    "start": "nodemon ./server.js"
   },
   "author": "",
   "license": "ISC",
@@ -19,6 +19,7 @@
     "morgan": "^1.9.0"
   },
   "devDependencies": {
+    "nodemon": "^1.17.2",
     "supertest": "^3.0.0"
   }
 }
