--- a/backend/package.json
+++ b/backend/package.json
@@ -5,14 +5,13 @@
   "private": true,
   "main": "app.js",
   "scripts": {
-    "test": "jest --watch",
+    "test": "DB_ADDRESS=localhost DB_NAME=gravnic-level-creator-test jest --watch",
     "start": "nodemon ./server.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.2",
-    "dotenv": "^5.0.1",
     "express": "^4.16.3",
     "winston": "^2.4.1",
     "mongoose": "^4.10.8",
