--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ services:
       - ./frontend:/frontend
     environment:
       - REACT_APP_BACKEND_ENDPOINT=http://localhost:4000
+      - PORT=1337
     depends_on:
       - backend
 
@@ -24,6 +25,11 @@ services:
       - ./backend:/backend
     environment:
       - DB_ADDRESS=database:27017
+      - PORT=1337
+      - BACKEND_PORT=1338
+      - DB_NAME=gravnic-level-creator
+      - LOG_LEVEL=debug
+      - MORGAN_LOGGING=ON
     depends_on:
       - database
 
