--- a/backend/package.json
+++ b/backend/package.json
@@ -11,11 +11,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bluebird": "^3.5.1",
     "body-parser": "^1.18.2",
     "express": "^4.16.3",
-    "winston": "^2.4.1",
     "mongoose": "^4.10.8",
-    "morgan": "^1.9.0"
+    "morgan": "^1.9.0",
+    "winston": "^2.4.1"
   },
   "devDependencies": {
     "nodemon": "^1.17.2",
