Add tests to the docker-compose file

--- a/e2e/package.json
+++ b/e2e/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.test.js",
   "scripts": {
-    "test": "jest"
+    "test": "FRONTEND_URL=localhost:3000 jest"
   },
   "author": "",
   "license": "ISC",
@@ -12,5 +12,8 @@
     "babel-preset-env": "^1.6.1",
     "jest": "^22.4.3",
     "nightmare": "^3.0.0"
+  },
+  "dependencies": {
+    "xvfb": "^0.2.3"
   }
 }
