--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "main": "app.js",
   "scripts": {
-    "test": "DB_ADDRESS=localhost DB_NAME=gravnic-level-creator-test jest --watch",
+    "test": "jest",
     "start": "nodemon ./server.js"
   },
   "author": "",
@@ -20,6 +20,7 @@
   },
   "devDependencies": {
     "nodemon": "^1.17.2",
-    "supertest": "^3.0.0"
+    "supertest": "^3.0.0",
+    "jest": "^22.4.3"
   }
 }
