--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,8 +11,17 @@ services:
     depends_on:
       - backend
     environment:
-      - REACT_APP_BACKEND_ENDPOINT=http://backend:4000
+      - REACT_APP_BACKEND_ENDPOINT=http://localhost:4000
       - PORT=3000
+
+  frontend_tests: 
+    image: node:9-alpine
+    working_dir: /frontend
+    command: "yarn test"
+    volumes:
+      - ./frontend:/frontend
+    environment:
+      - CI=true
 
   backend: 
     build: ./backend
@@ -27,16 +36,28 @@ services:
       - DB_ADDRESS=database:27017
       - PORT=4000
       - DB_NAME=gravnic-level-creator
+
+  backend_tests: 
+    image: node:9-alpine
+    working_dir: /backend
+    command: "yarn test --forceExit"
+    volumes:
+      - ./backend:/backend
+    depends_on:
+      - database
+    environment:
+      - DB_NAME=gravnic-level-creator-test
+      - DB_ADDRESS=database:27017
+      - PORT=5001
       - LOG_LEVEL=debug
-      - MORGAN_LOGGING=ON
+      - MORGAN_LOGGING=OFF
+      - CI=true
 
   e2e: 
     build: ./e2e
     working_dir: /e2e
     volumes:
       - ./e2e:/e2e
-    links:
-      - frontend 
     environment:
       - FRONTEND_URL=frontend:3000
     depends_on:
