--- a/e2e/package.json
+++ b/e2e/package.json
@@ -4,16 +4,15 @@
   "description": "",
   "main": "index.test.js",
   "scripts": {
-    "test": "FRONTEND_URL=localhost:3000 jest"
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
-  "devDependencies": {
+  "dependencies": {
+    "babel-core": "^6.26.0",
+    "babel-jest": "^22.4.3",
     "babel-preset-env": "^1.6.1",
     "jest": "^22.4.3",
-    "nightmare": "^3.0.0"
-  },
-  "dependencies": {
-    "xvfb": "^0.2.3"
+    "puppeteer": "^1.2.0"
   }
 }
