--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,12 @@
-version: '2'
+version: '2.1'
 
 services:
-  frontend: 
-    build: ./frontend
+  frontend_compile: 
+    image: node:9-alpine
     working_dir: /frontend
-    ports:
-      - "3000:3000"
+    command: "yarn"
     volumes:
       - ./frontend:/frontend
-    depends_on:
-      - backend
-    environment:
-      - REACT_APP_BACKEND_ENDPOINT=http://localhost:4000
-      - PORT=3000
 
   frontend_tests: 
     image: node:9-alpine
@@ -23,9 +17,36 @@ services:
     environment:
       - CI=true
 
+  frontend: 
+    build: ./frontend
+    command: "yarn start"
+    working_dir: /frontend
+    ports:
+      - "3000:3000"
+    volumes:
+      - ./frontend:/frontend
+    depends_on:
+      - backend
+    environment:
+      - REACT_APP_BACKEND_ENDPOINT=http://localhost:4000
+      - PORT=3000
+    healthcheck:
+      test: "curl -f http://frontend:3000"
+      interval: 10s
+      timeout: 5s
+      retries: 15
+
+  backend_compile: 
+    image: node:9-alpine
+    working_dir: /backend
+    command: "yarn"
+    volumes:
+      - ./backend:/backend
+
   backend: 
     build: ./backend
     working_dir: /backend
+    command: "yarn start"
     ports:
       - "4000:4000"
     volumes:
@@ -36,15 +57,18 @@ services:
       - DB_ADDRESS=database:27017
       - PORT=4000
       - DB_NAME=gravnic-level-creator
-
+    healthcheck:
+      test: "curl -f http://backend:4000/levels"
+      interval: 10s
+      timeout: 5s
+      retries: 15
+      
   backend_tests: 
     image: node:9-alpine
     working_dir: /backend
     command: "yarn test --forceExit"
     volumes:
       - ./backend:/backend
-    depends_on:
-      - database
     environment:
       - DB_NAME=gravnic-level-creator-test
       - DB_ADDRESS=database:27017
@@ -52,6 +76,8 @@ services:
       - LOG_LEVEL=debug
       - MORGAN_LOGGING=OFF
       - CI=true
+    depends_on:
+      - database
 
   e2e: 
     build: ./e2e
@@ -59,8 +85,10 @@ services:
     environment:
       - FRONTEND_URL=frontend:3000
     depends_on:
-      - frontend
-      - backend
+      frontend:
+        condition: service_healthy
+      backend:
+        condition: service_healthy
 
   database: 
     image: mongo 
