--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,8 @@
   "main": "app.js",
   "scripts": {
     "test": "jest",
-    "start": "nodemon ./server.js"
+    "start": "nodemon ./src/server.js",
+    "lint": "eslint --ext js src"
   },
   "author": "",
   "license": "ISC",
@@ -21,6 +22,13 @@
   "devDependencies": {
     "nodemon": "^1.17.2",
     "supertest": "^3.0.0",
-    "jest": "^22.4.3"
+    "jest": "^22.4.3",
+    "eslint": "^4.18.0",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-config-prettier": "^2.9.0",
+    "eslint-plugin-import": "^2.9.0",
+    "eslint-plugin-jest": "^21.12.2",
+    "eslint-plugin-prettier": "^2.6.0",
+    "prettier": "^1.11.1"
   }
 }
