Add the .env files back and start to add missing level manager e2e tests

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -3,7 +3,14 @@ FROM node:9-alpine
 RUN apk add --update curl && \
     rm -rf /var/cache/apk/*
 
-COPY . /frontend
+ADD yarn.lock /yarn.lock
+ADD package.json /package.json
+
+ENV NODE_PATH=/node_modules
+ENV PATH=$PATH:/node_modules/.bin
+RUN yarn
+
 WORKDIR /frontend
+ADD . /frontend
 
 EXPOSE 3000
