--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -3,7 +3,14 @@ FROM node:9-alpine
 RUN apk add --update curl && \
     rm -rf /var/cache/apk/*
 
-COPY . /backend
+ADD yarn.lock /yarn.lock
+ADD package.json /package.json
+
+ENV NODE_PATH=/node_modules
+ENV PATH=$PATH:/node_modules/.bin
+RUN yarn
+
 WORKDIR /backend
+ADD . /backend
 
 EXPOSE 4000
