--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "main": "app.js",
   "scripts": {
-    "test": "jest",
+    "test": "PORT=5000 DB_ADDRESS=localhost:27017 DB_NAME=gravnic-level-creator-test jest",
     "start": "nodemon ./src/server.js",
     "lint": "eslint --ext js src"
   },
@@ -14,21 +14,22 @@
   "dependencies": {
     "bluebird": "^3.5.1",
     "body-parser": "^1.18.2",
+    "dotenv": "^5.0.1",
     "express": "^4.16.3",
     "mongoose": "^4.10.8",
     "morgan": "^1.9.0",
     "winston": "^2.4.1"
   },
   "devDependencies": {
-    "nodemon": "^1.17.2",
-    "supertest": "^3.0.0",
-    "jest": "^22.4.3",
     "eslint": "^4.18.0",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-config-prettier": "^2.9.0",
     "eslint-plugin-import": "^2.9.0",
     "eslint-plugin-jest": "^21.12.2",
     "eslint-plugin-prettier": "^2.6.0",
-    "prettier": "^1.11.1"
+    "jest": "^22.4.3",
+    "nodemon": "^1.17.2",
+    "prettier": "^1.11.1",
+    "supertest": "^3.0.0"
   }
 }
