--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,7 +24,7 @@ services:
     environment:
       - CI=true
 
-  frontend: 
+  frontend:
     build: ./frontend
     command: "yarn start"
     working_dir: /frontend
@@ -34,9 +34,7 @@ services:
       - ./frontend:/frontend
     depends_on:
       - backend
-    environment:
-      - REACT_APP_BACKEND_ENDPOINT=http://localhost:4000
-      - PORT=3000
+    env_file: ./frontend/.env
     healthcheck:
       test: "curl -f http://frontend:3000"
       interval: 10s
@@ -67,10 +65,9 @@ services:
       - ./backend:/backend
     depends_on:
       - database
+    env_file: ./backend/.env
     environment:
       - DB_ADDRESS=database:27017
-      - PORT=4000
-      - DB_NAME=gravnic-level-creator
     healthcheck:
       test: "curl -f http://backend:4000/levels"
       interval: 10s
@@ -111,9 +108,10 @@ services:
     build: ./e2e
     working_dir: /e2e
     command: "yarn test"
+    env_file: ./e2e/.env
     environment:
-      - FRONTEND_URL=frontend:3000
       - CI=true
+      - FRONTEND_URL=frontend:3000
     depends_on:
       frontend:
         condition: service_healthy
