--- a/e2e/package.json
+++ b/e2e/package.json
@@ -13,14 +13,17 @@
     "babel-core": "^6.26.0",
     "babel-jest": "^22.4.3",
     "babel-preset-env": "^1.6.1",
-    "jest": "^22.4.3",
-    "puppeteer": "^1.2.0",
+    "bluebird": "^3.5.1",
+    "dotenv": "^5.0.1",
     "eslint": "^4.18.0",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-config-prettier": "^2.9.0",
     "eslint-plugin-import": "^2.9.0",
     "eslint-plugin-jest": "^21.12.2",
     "eslint-plugin-prettier": "^2.6.0",
-    "prettier": "^1.11.1"
+    "jest": "^22.4.3",
+    "mongoose": "^5.0.12",
+    "prettier": "^1.11.1",
+    "puppeteer": "^1.2.0"
   }
 }
