--- a/frontend/.eslintrc
+++ b/frontend/.eslintrc
@@ -16,6 +16,7 @@
     "import/no-named-as-default": 0,
     "react/jsx-filename-extension": 0,
     "react/forbid-prop-types": 0,
+    "react/no-array-index-key": 0,
     "function-paren-newline": 0,
     "import/no-unresolved": 0,
     "import/extensions": 0,
