--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,12 +14,16 @@
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.7",
     "react-scripts": "^1.1.1",
+    "react-sortable": "^2.0.0",
+    "react-sortable-hoc": "^0.6.8",
+    "react-sortablejs": "^1.3.6",
     "redux": "^3.7.2",
     "redux-devtools-extension": "^2.13.2",
     "redux-saga": "^0.16.0",
     "redux-thunk": "^2.2.0",
     "reselect": "^3.0.1",
     "shortid": "^2.2.8",
+    "sortablejs": "1.6.1",
     "styled-components": "^3.1.6"
   },
   "scripts": {
