Update CCI config so that e2e tests fail correctly

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -56,4 +56,4 @@ jobs:
             - e2e/node_modules
 
       - run: docker-compose run e2e_lint
-      - run: docker-compose up e2e
+      - run: docker-compose run e2e
