--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,7 @@
     "axios": "^0.18.0",
     "bluebird": "^3.5.1",
     "body-parser": "^1.18.2",
+    "deep-equal": "^1.0.1",
     "global": "^4.3.2",
     "isomorphic-fetch": "^2.2.1",
     "normalize.css": "^8.0.0",
