Fix bad docker compose config for backend linting

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -52,10 +52,10 @@ services:
 
   backend_lint: 
     image: node:9-alpine
-    working_dir: /frontend
+    working_dir: /backend
     command: "yarn lint"
     volumes:
-      - ./frontend:/frontend
+      - ./backend:/backend
 
   backend: 
     build: ./backend
