--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -89,21 +89,23 @@ jobs:
   deploy: 
     machine: true
     working_directory: ~/gravnic-level-creator
-    - add_ssh_keys:
-      fingerprints:
-        - "8e:5c:ca:37:d9:39:f3:19:61:b2:6d:eb:bd:20:f1:82"
     steps:
       - checkout
       - attach_workspace:
           at: ~/gravnic-level-creator
-      - run: bash .circleci/setup-heroku.sh
+      - add_ssh_keys:
+        fingerprints:
+          - "8e:5c:ca:37:d9:39:f3:19:61:b2:6d:eb:bd:20:f1:82"
+      - run:
+          name: Run Setup Script
+          command: bash .circleci/setup-heroku.sh
       - run: heroku git:remote -a $HEROKU_FRONTEND_APP_NAME
       - run: heroku git:remote -a $HEROKU_BACKEND_APP_NAME
       - run: heroku container:login
       - run: cd frontend/
-      - run: heroku container:push --app gravnic-frontend web
+      - run: heroku container:push --app $HEROKU_FRONTEND_APP_NAME web
       - run: cd ../backend/
-      - run: heroku container:push --app gravnic-backend web
+      - run: heroku container:push --app $HEROKU_BACKEND_APP_NAME web
       - run: sleep 5
       - run: heroku restart
 
