--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -93,21 +93,11 @@ jobs:
       - checkout
       - attach_workspace:
           at: ~/gravnic-level-creator
-      - add_ssh_keys:
-          fingerprints:
-            - "8e:5c:ca:37:d9:39:f3:19:61:b2:6d:eb:bd:20:f1:82"
-      - run:
-          name: Run Heroku Setup Script
-          command: bash .circleci/setup-heroku.sh
-      - run: heroku git:remote -a $HEROKU_FRONTEND_APP_NAME
-      - run: heroku git:remote -a $HEROKU_BACKEND_APP_NAME
-      - run: heroku container:login
-      - run: cd frontend/
-      - run: heroku container:push --app $HEROKU_FRONTEND_APP_NAME web
-      - run: cd ../backend/
-      - run: heroku container:push --app $HEROKU_BACKEND_APP_NAME web
-      - run: sleep 5
-      - run: heroku restart
+      - run: docker login --username=$HEROKU_LOGIN --password=$HEROKU_API_KEY registry.heroku.com
+      - run: docker build --rm=false -t registry.heroku.com/$HEROKU_FRONTEND_APP_NAME/web frontend/
+      - run: docker push registry.heroku.com/$HEROKU_FRONTEND_APP_NAME/web:latest
+      - run: docker build --rm=false -t registry.heroku.com/$HEROKU_BACKEND_APP_NAME/web backend/
+      - run: docker push registry.heroku.com/$HEROKU_BACKEND_APP_NAME/web:latest
 
 workflows:
   version: 2
