--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,53 +1,54 @@
 {
-  "name": "gravnic-level-creator",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "axios": "^0.18.0",
-    "bluebird": "^3.5.1",
-    "body-parser": "^1.18.2",
-    "deep-equal": "^1.0.1",
-    "global": "^4.3.2",
-    "isomorphic-fetch": "^2.2.1",
-    "normalize.css": "^8.0.0",
-    "prop-types": "^15.6.0",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
-    "react-redux": "^5.0.7",
-    "react-scripts": "^1.1.1",
-    "react-sortable": "^2.0.0",
-    "react-sortable-hoc": "^0.6.8",
-    "react-sortablejs": "^1.3.6",
-    "redux": "^3.7.2",
-    "redux-devtools-extension": "^2.13.2",
-    "redux-saga": "^0.16.0",
-    "redux-thunk": "^2.2.0",
-    "reselect": "^3.0.1",
-    "shortid": "^2.2.8",
-    "sortablejs": "1.6.1",
-    "styled-components": "^3.1.6"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject",
-    "lint": "eslint --ext js src"
-  },
-  "devDependencies": {
-    "enzyme": "^3.3.0",
-    "enzyme-adapter-react-16": "^1.1.1",
-    "enzyme-to-json": "^3.3.1",
-    "eslint": "^4.18.0",
-    "eslint-config-airbnb": "^16.1.0",
-    "eslint-config-prettier": "^2.9.0",
-    "eslint-plugin-import": "^2.9.0",
-    "eslint-plugin-jest": "^21.12.2",
-    "eslint-plugin-jsx-a11y": "^6.0.3",
-    "eslint-plugin-prettier": "^2.6.0",
-    "eslint-plugin-react": "^7.6.1",
-    "jest-styled-components": "^4.11.0-1",
-    "prettier": "^1.11.1",
-    "sinon": "^4.3.0"
-  }
+    "name": "gravnic-level-creator",
+    "version": "0.1.0",
+    "private": true,
+    "dependencies": {
+        "axios": "^0.18.0",
+        "bluebird": "^3.5.1",
+        "body-parser": "^1.18.2",
+        "deep-equal": "^1.0.1",
+        "global": "^4.3.2",
+        "isomorphic-fetch": "^2.2.1",
+        "normalize.css": "^8.0.0",
+        "prop-types": "^15.6.0",
+        "react": "^16.2.0",
+        "react-dom": "^16.2.0",
+        "react-redux": "^5.0.7",
+        "react-scripts": "^1.1.1",
+        "react-sortable": "^2.0.0",
+        "react-sortable-hoc": "^0.6.8",
+        "react-sortablejs": "^1.3.6",
+        "redux": "^3.7.2",
+        "redux-devtools-extension": "^2.13.2",
+        "redux-saga": "^0.16.0",
+        "redux-thunk": "^2.2.0",
+        "reselect": "^3.0.1",
+        "shortid": "^2.2.8",
+        "sortablejs": "1.6.1",
+        "styled-components": "^3.1.6",
+        "gravnic-game": "git+ssh://git@github.com:christopherpole/gravnic-game"
+    },
+    "scripts": {
+        "start": "react-scripts start",
+        "build": "react-scripts build",
+        "test": "react-scripts test --env=jsdom",
+        "eject": "react-scripts eject",
+        "lint": "eslint --ext js src"
+    },
+    "devDependencies": {
+        "enzyme": "^3.3.0",
+        "enzyme-adapter-react-16": "^1.1.1",
+        "enzyme-to-json": "^3.3.1",
+        "eslint": "^4.18.0",
+        "eslint-config-airbnb": "^16.1.0",
+        "eslint-config-prettier": "^2.9.0",
+        "eslint-plugin-import": "^2.9.0",
+        "eslint-plugin-jest": "^21.12.2",
+        "eslint-plugin-jsx-a11y": "^6.0.3",
+        "eslint-plugin-prettier": "^2.6.0",
+        "eslint-plugin-react": "^7.6.1",
+        "jest-styled-components": "^4.11.0-1",
+        "prettier": "^1.11.1",
+        "sinon": "^4.3.0"
+    }
 }
