--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
         "global": "^4.3.2",
         "gravnic-game": "git+ssh://git@github.com:christopherpole/gravnic-game",
         "isomorphic-fetch": "^2.2.1",
+        "lodash": "^4.17.5",
         "normalize.css": "^8.0.0",
         "prop-types": "^15.6.0",
         "react": "^16.2.0",
