--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,7 @@
         "body-parser": "^1.18.2",
         "deep-equal": "^1.0.1",
         "global": "^4.3.2",
-        "gravnic-game": "git+ssh://git@github.com:christopherpole/gravnic-game",
+        "gravnic-game": "git+ssh://git@github.com:christopherpole/gravnic-game#master",
         "isomorphic-fetch": "^2.2.1",
         "lodash": "^4.17.5",
         "normalize.css": "^8.0.0",
