--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
         "normalize.css": "^8.0.0",
         "prop-types": "^15.6.0",
         "react": "^16.2.0",
+        "react-copy-to-clipboard": "^5.0.1",
         "react-dom": "^16.2.0",
         "react-redux": "^5.0.7",
         "react-scripts": "^1.1.1",
